chore: fix Sonar warnings